--- a/src/app/shared/shooting-component/shooting.component.scss
+++ b/src/app/shared/shooting-component/shooting.component.scss
@@ -266,7 +266,8 @@ div.details {
 
 .header-wrapper {
   display: flex;
-  justify-content: space-evenly;
+  color: black;
+  justify-content: space-around;
   font-weight: 600;
 }
 
