--- a/src/app/shared/activity-history/activity-history.component.html
+++ b/src/app/shared/activity-history/activity-history.component.html
@@ -1,5 +1,5 @@
 <section class="activity-history">
-    <header>
+    <header [class.ios-mode]="this.platform.is('ios')">
         <div class="back-btn-container" (click)="onBackPressed()">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.721 22.938">
                 <defs>
@@ -80,11 +80,8 @@
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                                Personal data
+                                + See your shots
                             </mat-panel-title>
-                            <mat-panel-description>
-                                Type your name and age
-                            </mat-panel-description>
                         </mat-expansion-panel-header>
 
                         <div class="panel">
