--- a/src/global.scss
+++ b/src/global.scss
@@ -8,19 +8,43 @@
  * For more information on global stylesheets, visit the documentation:
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
-
 /* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
-
 /* Basic CSS for apps built with Ionic */
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
 @import '~@ionic/angular/css/display.css';
-
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
 @import "~@ionic/angular/css/float-elements.css";
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+.mat-expansion-panel {
+  background-color: white !important;
+}
+
+.mat-expansion-panel-header {
+  background-color: white !important;
+}
+
+.mat-expansion-panel-header-title {
+  color: black !important;
+  text-align: center;
+  display: flex !important;
+  justify-content: center;
+}
+
+.mat-expansion-indicator::after {
+  color: black !important;
+}
+
+.header-wrapper {
+  display: flex;
+  color: black;
+  justify-content: space-around;
+  font-weight: 600;
+}
