--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -206,7 +206,6 @@ div.form {
         padding: 0.5em;
         font-size: 1em;
         width: 100%;
-        font-weight: bold;
         background-color: transparent;
       }
 
@@ -281,7 +280,7 @@ div.form {
 .startSessionBtn {
   background-color: #3b3838;
   width: 60%;
-  height: 10vw;
+  height: 15vw;
   margin: 0.5em auto;
   color: white;
   font-size: 1.2em;
@@ -293,6 +292,16 @@ div.form {
   padding-top: 25px !important;
 }
 
-.menuBtniOs{
-  top:35px !important;
+.menuBtniOs {
+  top: 35px !important;
+}
+
+.back-btn-container {
+  position: absolute;
+  left: 5px;
+
+  svg {
+    height: 20px;
+    width: 20px;
+  }
 }
