hacks for navigating free

--- a/src/app/shared/authentication/signin/signin.component.html
+++ b/src/app/shared/authentication/signin/signin.component.html
@@ -2,7 +2,7 @@
     <div class="bg-image"></div>
     <div class="shadow"></div>
     <section class="wrapper">
-        <img src="./assets/icons/new/login/image18@3x.png">
+        <img src="assets/icons/new/login/image18@3x.png">
         <div class="centerPart">
             <div class="signin-wrapper" >
                 <div class="regular-wrapper">
