--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,1 +1,313 @@
 @import "../../assets/colors";
+
+section.edit-drill {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  header {
+    position: relative;
+    background-image: url("../../assets/edit-drill.jpg");
+    background-size: 100% 200px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 200px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    box-sizing: border-box;
+
+    p {
+      color: white;
+      margin: 0;
+      padding-top: 40px;
+
+      font-size: 20px;
+      line-height: 24px;
+      letter-spacing: 0.26px;
+    }
+
+    svg.back-button {
+      width: 35px;
+      height: 35px;
+      position: absolute;
+      top: 50%;
+      left: 1em;
+      transform: translateY(-50%);
+    }
+  }
+
+  div.main-content {
+    height: calc(100% - 200px); // Compensate on header height
+    overflow-y: auto;
+    box-sizing: border-box;
+    padding: 0 21px;
+  }
+
+  // Drill name
+  div.drill-name {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    position: relative;
+    padding-top: 1.5em;
+
+    &::after {
+      content: "";
+      width: 100%;
+      height: 1px;
+      background-color: rgba(0, 0, 0, 0.16);
+      //position: absolute;
+      //top: 100%;
+      //left: 50%;
+      //transform: translateX(-50%);
+    }
+
+    p {
+      font-size: 12px;
+      line-height: 14px;
+      letter-spacing: 1.88px;
+      padding-bottom: 0.5em;
+      color: rgba(0, 0, 0, 0.87);
+      margin: 0;
+      padding: 10px 0;
+    }
+
+    h3 {
+      font-size: 20px;
+      line-height: 24px;
+      letter-spacing: 0.26px;
+      color: rgba(0, 0, 0, 0.87);
+      margin: 0;
+      padding-bottom: 0.5em;
+    }
+  }
+
+  // Basic settings
+  div.basic-settings {
+    box-sizing: border-box;
+    margin-bottom: 0.5em;
+
+    p.red-title {
+      @include redTitle();
+    }
+
+    div.options {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-between;
+
+      div.row {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+
+        div.icon-and-text {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          svg {
+            width: 24px;
+            height: 24px;
+            margin-right: 1em;
+          }
+
+          p {
+            font-size: 12px;
+            line-height: 14px;
+            letter-spacing: 1.88px;
+          }
+        }
+
+        p.connected-target {
+          font-size: 16px;
+          line-height: 19px;
+          letter-spacing: 0.21px;
+          color: #4d89f5;
+          padding-right: 100px;
+        }
+      }
+    }
+  }
+
+  // IONIC sliders
+  ::ng-deep {
+
+    .sliders {
+      margin-bottom: 1.5em;
+    }
+
+    .sliders .swiper-wrapper .swiper-slide {
+      position: relative;
+
+      img {
+        padding: 0.5em;
+        border: 1px solid transparent;
+        transition: all 0.3s;
+
+        width: 152px;
+        width: 198px;
+        border-radius: 3px;
+
+        &.selected {
+          border: 1px solid #363636;
+        }
+      }
+
+      div.check {
+        position: absolute;
+        bottom: 1em;
+        right: 1em;
+        width: 20px;
+        height: 20px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        background-color: black;
+
+        svg {
+          fill: white;
+          width: 100%;
+        }
+      }
+    }
+  }
+
+  div.form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    p.red-title {
+      @include redTitle();
+      padding: 31px 0;
+      margin: 0;
+    }
+
+    div.container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      border-bottom: 1px solid transparent;
+      border-top: 1px solid #e3e3e3;
+
+      &:first-of-type {
+        border-top: 1px solid #e3e3e3;
+      }
+
+      &:last-of-type {
+        border-bottom: 1px solid transparent;
+      }
+
+      box-sizing: border-box;
+      padding: 1.5em 0;
+
+      div.title-and-icon {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        svg {
+          width: 25px;
+          height: 25px;
+          margin-right: 0.5em;
+        }
+
+        p {
+          font-size: 12px;
+          line-height: 14px;
+          letter-spacing: 1.88px;
+          color: rgba(0, 0, 0, 0.87);
+          margin: 0;
+        }
+
+      }
+
+      input.bullets {
+        width: 58px;
+        height: 40px;
+        box-sizing: border-box;
+        padding: 10px;
+        border: 1px solid #e3e3e3;
+        border-radius: 4px;
+
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.24px;
+        color: rgba(0, 0, 0, 0.87);
+
+      }
+
+      div.inputs {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        select,
+        input {
+          height: 40px;
+          box-sizing: border-box;
+          padding: 10px;
+          border: 1px solid #e3e3e3;
+          border-radius: 4px;
+
+          font-size: 14px;
+          line-height: 16px;
+          letter-spacing: 0.24px;
+          color: rgba(0, 0, 0, 0.87);
+        }
+      }
+
+      select {
+        width: 214px;
+        height: 40px;
+        box-sizing: border-box;
+        padding: 10px;
+        border: 1px solid #e3e3e3;
+        border-radius: 4px;
+
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.24px;
+        color: rgba(0, 0, 0, 0.87);
+
+      }
+
+      &.range {
+        border-bottom: 1px solid #e3e3e3;
+
+        div.inputs {
+          input {
+            width: 97px;
+            margin-right: 0.5em;
+          }
+
+          select {
+            width: 128px;
+          }
+        }
+      }
+    }
+  }
+
+  button.startSessionBtn {
+    background-color: #ce564b;
+    width: 100%;
+    padding: 20px;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 1.25px;
+    color: white;
+    margin: 32px 0;
+  }
+}
+
