--- a/src/global.scss
+++ b/src/global.scss
@@ -24,6 +24,34 @@
 @import "assets/colors";
 
 
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: url("assets/fonts/Roboto-Bold.ttf");
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url("assets/fonts/Roboto-Regular.ttf");
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: url("assets/fonts/Roboto-Thin.ttf");
+}
+
+
+body, html {
+  margin: 0;
+  height: 100%;
+  font-family: 'Roboto', Arial, serif;
+}
+
 .mat-expansion-panel {
   background-color: white !important;
 }
@@ -121,3 +149,4 @@ mat-step-header {
 .mat-stepper-horizontal{
   height: 100% !important;
 }
+
